<resources>
    <string name="app_name">phase3</string>
    <string name="url">http://192.168.1.10/Phase3/</string>
    <string name="student_access">Student</string>
    <string name="instructor_access">Instructor</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_your_role">Choose your role.</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="instructor_login">Instructor Login</string>
    <string name="student_login">Student Login</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="welcome_student">Welcome, Student!</string>
    <string name="course_registration">Course Registration</string>
    <string name="my_schedule">My Schedule</string>
    <string name="academic_history">Academic History</string>
    <string name="academic_alerts">Academic Alerts</string>
    <string name="logout">Logout</string>
    <string name="view_current_students">View Current Students</string>
    <string name="view_previous_students">View Previous Students</string>
    <string name="submit_midterm_grades">Submit Midterm Grades</string>
    <string name="view_taught_sections">View Taught Sections</string>
    <string name="course_registration_title">Course Registration</string>
    <string name="academic_history_title">Academic History</string>
    <string name="gpa_label">GPA:</string>
    <string name="total_credits_label">Total Credits:</string>
    <string name="student_schedule_title">My Schedule</string>
    <string name="no_courses_for_the_selected_semester_and_year">No courses for the selected semester and year.</string>
    <string name="welcome_instructor">Welcome, Instructor!</string>
    <string name="current_students">Current Students</string>
    <string name="create_student_account">Create Student Account</string>
    <string name="taught_sections">Taught Sections</string>
    <string name="grades_amp_alerts"><![CDATA[Grades & Alerts]]></string>
    <string name="no_courses_found">No courses found.</string>
</resources>
