<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/instructorWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="108dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/viewSectionsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_taught_sections"
        app:layout_constraintTop_toBottomOf="@id/instructorWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="92dp" />

    <Button
        android:id="@+id/submitGradesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_midterm_grades"
        app:layout_constraintTop_toBottomOf="@id/viewSectionsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/currentStudentsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_current_students"
        app:layout_constraintTop_toBottomOf="@id/submitGradesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/instructorLogoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/currentStudentsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
